# feedly-regexp-marker

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: bump-version.yml  generate-json-schema.yaml  lint.yml  test.yml  workflow.yml
feedly_regexp_marker/: __main__.py  classifier.py  cli.py  feedly_client.py  feedly_controller.py  pattern_texts.py  rules.py
feedly_regexp_marker/commands/: gen_json_schema_for_rules.py  mark_entries_by_rules.py
feedly_regexp_marker/lib/: classifier.py  feedly_controller.py  slack.py  util.py
tests/: test_classifier.py  test_feedly_client.py  test_pattern_texts.py  test_rules.py
