[tool.flake8]
extend-ignore = "E501,W503"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"

[tool.poetry]
name = "feedly_regexp_marker"
version = "0.1.0"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"
click = "^8.0.4"
feedly-client = "^0.23.2"
logzero = "^1.7.0"
pydantic = "^1.9.0"
pydantic-yaml = {extras = ["ruamel"], version = "^1.4.0"}
slack-sdk = "^3.34.0"
watchfiles = "^0.15.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = {extras = ["pyproject"], version = "^5.10.1"}
mypy = "^1.14"
pydocstyle = "^6.3.0"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
