[tool.isort]
profile = "black"

[tool.mypy]
plugins = "pydantic.mypy"

[[tool.mypy.overrides]]
module = ["feedly.*", "logzero.*"]
ignore_missing_imports = true

[tool.poetry]
name = "feedly_regexp_marker"
version = "2025.02.11.2"
description = ""
authors = ["dmingn <dmingn@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.11.13"
feedly-client = "^0.23.2"
logzero = "^1.7.0"
pydantic = "^1.9.0"
pydantic-yaml = {extras = ["ruamel"], version = "^0.6.3"}
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
isort = {extras = ["pyproject"], version = "^6.0.0"}
mypy = "^1.14"
pydocstyle = "^6.3.0"

[tool.poetry.scripts]
feedly-regexp-marker = "feedly_regexp_marker.__main__:main"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
